gac_sb/objects/Mission__c.object
<CustomObject>
    <fields>
        <fullName>DateRealisationAnnexe__c</fullName>
        <description>Date de réalisation des annexes</description>
        <label>Data de Elaboração das planilhas de supo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateRealisationDossier__c</fullName>
        <description>Date de réalisation du dossier</description>
        <label>Data de finalização</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReunionFinale__c</fullName>
        <description>Date de réunion finale</description>
        <label>Reunião de fechamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateRevisionInterneFormulaire__c</fullName>
        <description>Date de Révision Interne du Formulaire</description>
        <label>Data de revisão interna do formulario</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateValidationDossierClient__c</fullName>
        <description>Date de validation du dossier par le client</description>
        <label>Data de validação do cliente do RIT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateValidationInterneDossier__c</fullName>
        <description>Date de validation interne du dossier</description>
        <label>Data de envio do formulário</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateValidationInterneFormulaire__c</fullName>
        <description>Date de validation interne du formulaire</description>
        <label>Data de aprovação interna do formulario</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1ere_facturation__c</fullName>
        <label>Date 1ère facturation</label>
        <summarizedField>Facture__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Facture__c.Statut__c</field>
            <operation>equals</operation>
            <value>Validée, Envoyée, Soldée</value>
        </summaryFilterItems>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_KOM__c</fullName>
        <label>Date KOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_audit_diagnostic__c</fullName>
        <label>Date audit diagnostic</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_d_audit__c</fullName>
        <label>Date d&apos;audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_d_p_t_demande_de_financement__c</fullName>
        <label>Date dépôt demande de financement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_1_re_entrevue__c</fullName>
        <description>canada</description>
        <label>Date de 1ère entrevue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_1ere_formation__c</fullName>
        <label>Date de 1ère formation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_demande_d_information_RQ__c</fullName>
        <description>Canada</description>
        <label>Date de demande d&apos;information RQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_depot_des_preconisations__c</fullName>
        <label>Date de dépôt des préconisations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_factu_forfait_annuel__c</fullName>
        <label>Date de factu forfait annuel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_d_exercice__c</fullName>
        <description>Permet de saisir la Date de fin d’exercice</description>
        <inlineHelpText>Permet de saisir la Date de fin d’exercice</inlineHelpText>
        <label>Date de fin d’exercice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_livraison_client__c</fullName>
        <description>canada</description>
        <label>Date de livraison client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_livraison_comptable__c</fullName>
        <description>Canada</description>
        <label>Date de livraison comptable</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_production_finance__c</fullName>
        <description>Canada</description>
        <label>Date de production finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_production_fiscalit__c</fullName>
        <description>Canada</description>
        <label>Date de production fiscalité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_r_ception_avis_de_cot_f_d_rale__c</fullName>
        <description>Canada</description>
        <inlineHelpText>date de réception avis de cotisation Fédérale</inlineHelpText>
        <label>Date de réception avis de cot. fédérale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_r_ception_avis_de_cot_provincial__c</fullName>
        <description>Canada</description>
        <inlineHelpText>Date de réception avis de cotisation provincial</inlineHelpText>
        <label>Date de réception avis de cot provincial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_r_daction_technique_compl_t_e__c</fullName>
        <description>Canada</description>
        <label>Date de rédaction technique complétée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_rapport__c</fullName>
        <label>Date de rapport</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_reception_docs_administration__c</fullName>
        <label>Date de réception docs administration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_reception_docs_client__c</fullName>
        <label>Date de réception docs client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_restitution_de_l_etude_planifie__c</fullName>
        <label>Date de restitution de l&apos;étude planifiée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_restitution_de_l_etude_reelle__c</fullName>
        <label>Date de restitution de l&apos;étude réelle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_signature_du_client__c</fullName>
        <formula>Contrat__r.CustomerSignedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de signature du client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_v_rification__c</fullName>
        <description>Canada</description>
        <label>Date de vérification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_IRAS_approval_Reply_to_queries__c</fullName>
        <label>Date of IRAS approval - Reply to queries</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_IRAS_approval__c</fullName>
        <label>Date of IRAS approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_reception_of_IRAS_queries__c</fullName>
        <label>Date of reception of IRAS queries</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_rejection__c</fullName>
        <label>Date of rejection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_sending_by_GAC_to_the_client__c</fullName>
        <label>Date of sending by GAC to the client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_sending_by_the_client_to_IRAS__c</fullName>
        <label>Date of sending by the client to IRAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_pr_sentation_du_p_rim_tre__c</fullName>
        <label>Date présentation du périmètre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_pr_sentation_finale__c</fullName>
        <label>Date présentation finale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_r_ponse_organisme_financeur__c</fullName>
        <label>Date réponse organisme financeur</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_sending_by_client_to_IRAS_Reply__c</fullName>
        <description>Date sending by client to IRAS - Reply to queries</description>
        <inlineHelpText>Date sending by client to IRAS - Reply to queries</inlineHelpText>
        <label>Date sending by client to IRAS - Reply</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_versement_aide__c</fullName>
        <label>Date versement aide</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_to_reply_to_IRAS_queries__c</fullName>
        <label>Deadline to reply to IRAS queries</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delai_contrat_1ere_facture__c</fullName>
        <formula>IF(NOT(ISNULL(Contrat__c)), Date_1ere_facturation__c - Contrat__r.CustomerSignedDate,-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Délai contrat // 1ere facture</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepreciationAccelere__c</fullName>
        <description>Déppréciation accélérée</description>
        <label>Depreciação accelerada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detalhes_do_projeto__c</fullName>
        <label>Detalhes do projeto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dur_e_initiale_mois__c</fullName>
        <label>Durée initiale (mois)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duree_du_projet__c</fullName>
        <inlineHelpText>Durée en mois</inlineHelpText>
        <label>Durée du projet</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_KOM__c</fullName>
        <label>Effective KOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_end_of_Mission__c</fullName>
        <label>Effective end of Mission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ElaborationFormulaire__c</fullName>
        <description>Elaboration du formulaire</description>
        <label>Elaboração formulário MCTI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_of_accounting_year__c</fullName>
        <label>End of accounting year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntrepriseDeficitaire__c</fullName>
        <label>Prejuizo fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EntrepriseMoyenne__c</fullName>
        <description>Entreprise moyenne</description>
        <label>Empresa de pequeno porte</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EnvioPrevia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Envio de prévia</description>
        <label>Envio de prévia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_KOM__c</fullName>
        <label>Estimated KOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Margin__c</fullName>
        <formula>Total_estimated_Margin__c  /  CA_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Margin_this_year__c</fullName>
        <formula>If(CA_2016__c &gt; 0,(Total_estimated_margin_this_year__c / CA_2016__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Margin % this year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_end_of_Mission__c</fullName>
        <label>Estimated end of Mission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Etape__c</fullName>
        <label>Etape</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KOM</fullName>
                </value>
                <value>
                    <fullName>Non démarrée</fullName>
                </value>
                <value>
                    <fullName>Collecte documents</fullName>
                </value>
                <value>
                    <fullName>Rapport remis au client</fullName>
                </value>
                <value>
                    <fullName>Mise en application</fullName>
                </value>
                <value>
                    <fullName>Refusée</fullName>
                </value>
                <value>
                    <fullName>Valorisation du chiffre d&apos;affaire</fullName>
                </value>
                <value>
                    <fullName>Dégrèvement obtenu</fullName>
                </value>
                <value>
                    <fullName>Bloqué</fullName>
                </value>
                <value>
                    <fullName>Analyse à effectuer</fullName>
                </value>
                <value>
                    <fullName>En cours d&apos;analyse</fullName>
                </value>
                <value>
                    <fullName>Dépôt de réclamation</fullName>
                </value>
                <value>
                    <fullName>Décision prononcée</fullName>
                </value>
                <value>
                    <fullName>Rien à faire</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Préparation</fullName>
                </value>
                <value>
                    <fullName>Analyse</fullName>
                </value>
                <value>
                    <fullName>Rédaction technique</fullName>
                </value>
                <value>
                    <fullName>Production finance</fullName>
                </value>
                <value>
                    <fullName>Production fiscalité</fullName>
                </value>
                <value>
                    <fullName>Envoi au comptable</fullName>
                </value>
                <value>
                    <fullName>Envoi au client</fullName>
                </value>
                <value>
                    <fullName>Vérification</fullName>
                </value>
                <value>
                    <fullName>Opposition</fullName>
                </value>
                <value>
                    <fullName>Cour d’appel</fullName>
                </value>
                <value>
                    <fullName>En attente cotisation fédérale et/ou provinciale</fullName>
                </value>
                <value>
                    <fullName>Saisie du TA</fullName>
                </value>
                <value>
                    <fullName>Terminée</fullName>
                </value>
                <value>
                    <fullName>Dossier à zéro</fullName>
                </value>
                <value>
                    <fullName>Réunion de lancement effectuée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ext_ID_CA__c</fullName>
        <description>champ ID externe canadien</description>
        <externalId>true</externalId>
        <label>Ext_ID_CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fees_Base__c</fullName>
        <label>Fees Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filiale_concernee__c</fullName>
        <label>Filiale concernée</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormaulaireA3__c</fullName>
        <label>Formulário A3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FormulaireA2__c</fullName>
        <label>Formulário A2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormulaireB5__c</fullName>
        <label>Formulário B5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em elaboração</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormulaireEvaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Questões MCTI avaliação Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fr_quence_meetings_consortium__c</fullName>
        <label>Fréquence meetings consortium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trimestrielle</fullName>
                </value>
                <value>
                    <fullName>Semestrielle</fullName>
                </value>
                <value>
                    <fullName>Annuelle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GST_registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OLD SGP - Retiré des présentations de pages de missions à la demande d&apos;Antoine de Montety - requête numéro 00017639</description>
        <label>GST-registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gerente_de_projetos__c</fullName>
        <label>Gerente de projetos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>André Roncolato</fullName>
                </value>
                <value>
                    <fullName>Adriano Araujo</fullName>
                </value>
                <value>
                    <fullName>Antoine Humbert</fullName>
                </value>
                <value>
                    <fullName>Bruno Oliveira</fullName>
                </value>
                <value>
                    <fullName>Camila Donizette</fullName>
                </value>
                <value>
                    <fullName>Debora Beraldo</fullName>
                </value>
                <value>
                    <fullName>Eduardo Yamaguchi</fullName>
                </value>
                <value>
                    <fullName>Edwin Lima</fullName>
                </value>
                <value>
                    <fullName>Ana Paula Keller</fullName>
                </value>
                <value>
                    <fullName>Coro Lasheras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPIMaterielImporte__c</fullName>
        <description>IPI matériel importé</description>
        <label>IPI sobre material importado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPIMaterielNational__c</fullName>
        <description>IPI materiel national</description>
        <label>IPI sobre material nacional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ créé pour le bureau singapourien</description>
        <label>IT Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_Bonus__c</fullName>
        <label>Information Bonus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Redevance__c</fullName>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investissement__c</fullName>
        <label>Investissement</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MatierePremiere__c</fullName>
        <description>Matière Première</description>
        <label>Material de consumo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MicroEntreprise__c</fullName>
        <description>Micro entreprise</description>
        <label>Micro Empresa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mission_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission N-1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contrat__c</field>
                <operation>equals</operation>
                <valueField>Mission__c.Contrat__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>Missions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission_Principale_SGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission Principale SGP</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can&apos;t select a different Mission as SGP</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SGP - PIC</value>
            </filterItems>
            <filterItems>
                <field>Mission__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SGP - PIC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Missions (Mission Principale SGP)</relationshipLabel>
        <relationshipName>Missions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modalit_de_facturation__c</fullName>
        <description>Modalités de facturation AT ADVANCE/Risk Pro Online</description>
        <label>Modalité de facturation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Au barème</fullName>
                </value>
                <value>
                    <fullName>Au forfait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_Bonus__c</fullName>
        <label>Montant Bonus</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_Bonus_paye__c</fullName>
        <label>Montant Bonus payé</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_a_restant_payer__c</fullName>
        <formula>(Montant_de_la_redevance__c  -  Montant_paye__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant restant à payer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_credit_Provincial__c</fullName>
        <description>Champ canadien</description>
        <label>Montant crédit Provincial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_credit_federal__c</fullName>
        <description>Champ canadien</description>
        <label>Montant crédit fédéral</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_de_la_redevance__c</fullName>
        <description>Champ Canadien</description>
        <label>Montant de la redevance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_demande_initial_federal__c</fullName>
        <label>Montant demandé initial Fédéral</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_demande_initial_provincial__c</fullName>
        <label>Montant demandé initial Provincial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_du_bonus_restant_a_payer__c</fullName>
        <formula>(Montant_Bonus__c  -  Montant_Bonus_paye__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du bonus restant à payer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_forfait__c</fullName>
        <description>Montant du forfait ( modalité de facturation)</description>
        <label>Montant forfait</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_paye__c</fullName>
        <label>Montant payé</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_paye_au_scientifique__c</fullName>
        <label>Montant payé au scientifique</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_restant_a_payer_au_scientifique__c</fullName>
        <formula>(Cout_de_Prod_Ext_Cslt__c  -  Montant_paye_au_scientifique__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant restant à payer au scientifique</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montante_economizado__c</fullName>
        <label>Montante economizado</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montante_pedido__c</fullName>
        <label>Montante pedido</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montante_recebido__c</fullName>
        <label>Montante recebido</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mots_de_passe_MCTI__c</fullName>
        <label>Senha MCTI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_Mission__c</fullName>
        <formula>IF(Contrat__r.Numero_de_dossier_GAC__c &lt;&gt; &apos;&apos;,Contrat__r.Numero_de_dossier_GAC__c,Contrat__r.ContractNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N° Mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_Mission_force__c</fullName>
        <label>N° Mission (forcé)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_mero_de_horas_efectivas_apoio_RH__c</fullName>
        <description>Nombre d&apos;heures réelles de traitement de la mission saisies par l&apos;équipe RH.</description>
        <label>Número de horas efectivas apoio RH</label>
        <summarizedField>Annual_time_sheet__c.Number_of_hours_really_done__c</summarizedField>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Annual Time Sheet LDB, Annual Time Sheet CSL, Annual Time Sheet FND</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.Consultant_type__c</field>
            <operation>equals</operation>
            <value>RH</value>
        </summaryFilterItems>
        <summaryForeignKey>Annual_time_sheet__c.Mission_concerned__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_mero_de_horas_efectivas_apoio_cont_bil__c</fullName>
        <description>Nombre d&apos;heures réelles de traitement de la mission saisies par le support comptable.</description>
        <label>Número de horas efectivas apoio contábil</label>
        <summarizedField>Annual_time_sheet__c.Number_of_hours_really_done__c</summarizedField>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Annual Time Sheet LDB, Annual Time Sheet CSL, Annual Time Sheet FND</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.Consultant_type__c</field>
            <operation>equals</operation>
            <value>Contábil</value>
        </summaryFilterItems>
        <summaryForeignKey>Annual_time_sheet__c.Mission_concerned__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_mero_de_horas_efectivas_consultor__c</fullName>
        <inlineHelpText>Nombre d&apos;heures réelles de traitement de la mission saisies par un/des consultant(s).</inlineHelpText>
        <label>Número de horas efectivas consultor</label>
        <summarizedField>Annual_time_sheet__c.Number_of_hours_really_done__c</summarizedField>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.Consultant_type__c</field>
            <operation>equals</operation>
            <value>Consulting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Annual Time Sheet LDB, Annual Time Sheet CSL, Annual Time Sheet FND</value>
        </summaryFilterItems>
        <summaryForeignKey>Annual_time_sheet__c.Mission_concerned__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_factures__c</fullName>
        <label>Nb factures</label>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_factures_factures_validees__c</fullName>
        <label>Nb factures validées</label>
        <summaryFilterItems>
            <field>Facture__c.Statut__c</field>
            <operation>equals</operation>
            <value>Validée, Envoyée, Soldée</value>
        </summaryFilterItems>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_of_days_forecasted__c</fullName>
        <label>Nb of days forecasted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_of_days_spent__c</fullName>
        <label>Nb of days spent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_planifications__c</fullName>
        <label>Nb planifications</label>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_planifications_facturees__c</fullName>
        <label>Nb planifications facturées</label>
        <summaryFilterItems>
            <field>Prevision_de_facturation__c.Statut__c</field>
            <operation>equals</operation>
            <value>Facturée</value>
        </summaryFilterItems>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>